# polygon-app

./: .env.shared  .gitignore  app.py  pyproject.toml  scratch.py
cdk/: common.py  constructs.py  stacks.py
cdk.out/: manifest.json  polygon.assets.json  polygon.template.json  polygonservice33747F0F.nested.template.json  tree.json
cdk.out/asset.b40bbbb3444c7b4911ae12de292192c44bcacdd0335a2c1ad27f146486a4440e/: handler.py
infra/: constructs.py  helpers.py  stacks.py
src/api/: handler.py
src/api/service/aws/: dynamo.py
src/core/common/aws/: dynamo.py  sqs.py
src/extraction/: handler.py
src/manager/: handler.py
src/processor/: handler.py  requirements.txt  scratch.py
src/processor/common/aws/: sns.py
src/processor/processor_service/: capture.py  data.py
